base_trainer and device fix

--- a/hw_as/configs/asv/onebatch_config.json
+++ b/hw_as/configs/asv/onebatch_config.json
@@ -94,7 +94,7 @@
       "early_stop": 100,
       "visualize": "wandb",
       "wandb_project": "asvspoof_rawnet2_project",
-      "wandb_run_name": "test_run",
+      "wandb_run_name": "onebatch_test",
       "len_epoch": 100,
       "grad_norm_clip": 10
     }
